--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -12,3 +12,9 @@
     display: flex;
     align-items: center;
   }
+
+  .profile-button {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+  }
