--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -1,9 +1,9 @@
 footer {
-    position: fixed;
+    /* position: fixed; */
     bottom: 0;
     left: 0;
     width: 100%;
-    background-color: aqua;
+    background-image: linear-gradient(to left, white, #FDD34F, #88C659);
     padding-top: 2%;
     padding-bottom: 2%;
     color: black;
