--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -4,6 +4,7 @@
     position: sticky;
     top: 0px;
     padding: 1%;
+    background-image: linear-gradient(to right, white, #FDD34F, #88C659);
 }
 
 .logo {
