--- a/frontend/src/components/Homepage/homepage.css
+++ b/frontend/src/components/Homepage/homepage.css
@@ -1,6 +1,7 @@
 .homepage {
     display: flex;
     flex-direction: column;
+    gap: 10px;
 }
 
 h1 {
@@ -55,4 +56,9 @@ h1 {
   margin-top: 40px;
   /* top: 250px; */
   font-size: 30px;
+}
+
+.events-link {
+    text-align: center;
+    margin-top: 50px;
 }
