--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -5,6 +5,7 @@
     width: 100%;
     /* background-image: linear-gradient(to left, white, #c65988); */
     background-color: #c67859;
+    /* background-color: #59b7c6; */
     padding-top: 2%;
     padding-bottom: 2%;
     color: black;
