--- a/frontend/src/components/Events/EventListItem.css
+++ b/frontend/src/components/Events/EventListItem.css
@@ -1,10 +1,29 @@
 .event-list-item {
     font-size: 25px;
-    text-decoration: none;
   }
-  
-  .event-location,
-  .event-dates {
+
+  .event-link {
+    text-decoration: none;
+    font-weight: 700;
+  }
+
+  .event-location {
     font-size: 15px;
+    font-weight: 600;
+  }
+
+  .event-dates {
+    font-size: 12px;
+  }
+
+  .link {
+    text-decoration: none;
+    color: black;
+    font-weight: 700;
+    transition: color 0.3s ease;
+  }
+
+  .link:hover {
+    color: #88c659;
   }
   
