--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -4,7 +4,8 @@
     position: sticky;
     top: 0px;
     padding: 1%;
-    background-color: #59b7c6;
+    height: 100px;
+    /* background-color: #59b7c6; */
     /* background-image: linear-gradient(to right, white, #75625e); */
     /* background-image: linear-gradient(to right, white, #FDD34F, #88C659); */
 }
