--- a/frontend/src/components/Footer/footer.css
+++ b/frontend/src/components/Footer/footer.css
@@ -3,16 +3,28 @@
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 1%;
+    height: 20px;
     /* background-image: linear-gradient(to left, white, #c65988); */
     /* background-color: #c67859; */
-    background-color: #59b7c6;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    background-color: #88C659;
+    padding-top: 2px;
+    padding-bottom: 25px;
     color: black;
     text-align: center;
     display: flex;
     flex-direction: row;
     justify-content: center;
     gap: 50px;
+    text-decoration: none;
 }
+
+.footer a {
+    color: white;
+    font-weight: bold;
+    text-decoration: none;
+    transition: color 0.3s ease;
+  }
+  
+  .footer a:hover {
+    color: lightgray;
+  }
