--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -16,6 +16,7 @@
     height: auto;
     display: flex;
     align-items: center;
+    margin-left: 2%;
 }
 
 #hidden {
@@ -23,7 +24,33 @@
 }
 
 .profile-button {
-    position: absolute;
-    right: 20px;
-    top: 20px;
+    /* position: absolute; */
+    /* right: 20px;
+    top: 20px; */
+    margin-right: 2%;
+    width: 250px;
+}
+
+.session-buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 20px;
+}
+
+.login, .signup, .logout {
+  background-color: #88C659;
+  padding: 6%;
+  border-radius: 10px;
+  color: black;
+  font-size: 20px;
+  width: fit-content;
+  height: auto;
+}
+
+.login:hover, .signup:hover, .logout:hover {
+  background-color:#FDD34F ;
+}
+
+.logout {
+  cursor: pointer;
 }
