bottome footer complete

--- a/frontend/src/components/Homepage/homepage.css
+++ b/frontend/src/components/Homepage/homepage.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 10px;
-    background-color: #59b7c6;
+    background-color: white;
 }
 
 .homepage-title {
