--- a/frontend/src/components/Homepage/homepage.css
+++ b/frontend/src/components/Homepage/homepage.css
@@ -7,11 +7,11 @@
 
 .homepage-title {
   text-align: center;
-  font-size: 80px;
+  font-size: 70px;
   color: white;
   position: absolute; 
   top: 65%; 
-  left: 28%; 
+  left: 25%; 
   transform: translate(-50%, -50%); 
   z-index: 2; 
   background-color: #918e8e8f;
@@ -60,8 +60,8 @@ a:active {
 }
 
 .pic-container {
-  width: 1000px;
-  height: 900px;
+  width: 100%;
+  height: 700px;
 }
 
 .carousel-image {
