small button styling

--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -39,10 +39,11 @@
 
 .login, .signup, .logout {
   background-color: #88C659;
-  padding: 6%;
+  padding: 4%;
   border-radius: 10px;
-  color: black;
+  color: white;
   font-size: 20px;
+  font-weight: 700;
   width: fit-content;
   height: auto;
 }
