--- a/frontend/src/components/Homepage/homepage.css
+++ b/frontend/src/components/Homepage/homepage.css
@@ -1,39 +1,31 @@
 .homepage {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  background-color: white;
 }
 
 .homepage-title {
   text-align: center;
   font-size: 70px;
   color: white;
-  position: absolute; 
-  bottom: 5%; 
-  left: 25%; 
-  transform: translate(-50%, -50%); 
-  z-index: 2; 
-  background-color: #918e8e8f;
-  background-image: linear-gradient(
-    45deg,
-    #88C659 50%,
-    black 50%
-  );
+  position: absolute;
+  bottom: 5%;
+  left: 25%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
   padding: 1%;
   border-radius: 20px;
+  background-color: #918e8e8f;
+  background-image: linear-gradient(45deg, #88C659 50%, black 50%);
+  background-size: 200%;
+  background-position: 50%;
+  transition: background-position 0.5s;
 }
 
 .homepage-title:hover {
-    animation: rainbow-text-simple-animation 0.5s ease-in forwards;
-    background-image: linear-gradient(
-    45deg,
-    black 50%,
-    #88C659 50%
-  );
-  color: white;
+  background-position: 0 0;
 }
-
 a:link {
   text-decoration: none;
 }
