--- a/frontend/src/components/Events/EventShow.css
+++ b/frontend/src/components/Events/EventShow.css
@@ -86,15 +86,19 @@
 .single-place {
     text-align: start;
     border-bottom: rgb(172, 172, 172) solid 1px;
-    height: 100px;
-    width: 100%;
+    height: 150px;
+    /* width: 100%; */
     color: white;
-    text-shadow: -1px 1px 2px #000,
+    text-shadow: -1px 2px 4px #000,
     1px 1px 2px #000,
     1px -1px 0 #000,
     -1px -1px 0 #000;
     display: flex;
     flex-direction: column;
+    align-content: center;
+    align-items: baseline;
+    overflow: hidden;
+    position: relative;
 }
 
 .single-place-text {
@@ -103,17 +107,36 @@
     position: absolute; 
     z-index: 2; 
     margin-left: 5px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: baseline;
+    gap: 5px;
 }
 
 .single-place-name {
     font-size: 30px;
     font-weight: 700;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
+    /* background-color: rgba(128, 128, 128, 0.512); */
+    padding: 1px;
+    border-radius: 10px;
+
 }
 
 .single-place-rating {
     color: #88C659;
     font-weight: 500;
     font-size: 20px;
+    background-color: rgba(255, 255, 255, 0.512);
+    padding: 1px;
+    border-radius: 10px;
 }
 
 .single-place-picture {
@@ -123,15 +146,12 @@
 
 .single-place-vicinity {
     color: white;
-	/* -webkit-text-stroke: 1px black; */
+    /* background-color: rgba(128, 128, 128, 0.512); */
+    padding: 1px;
+    border-radius: 10px;
 }
 
 .all-places {
     display: flex;
     flex-direction: column;
 }
-
-/* img {
-    height: 100%;
-    width: 100%;
-} */
