--- a/frontend/src/components/Homepage/homepage.css
+++ b/frontend/src/components/Homepage/homepage.css
@@ -10,7 +10,7 @@
   font-size: 70px;
   color: white;
   position: absolute; 
-  top: 65%; 
+  bottom: 5%; 
   left: 25%; 
   transform: translate(-50%, -50%); 
   z-index: 2; 
@@ -18,7 +18,6 @@
   background-image: linear-gradient(
     45deg,
     #88C659 50%,
-    /* #0a4234 50%, */
     black 50%
   );
   padding: 1%;
@@ -31,7 +30,6 @@
     45deg,
     black 50%,
     #88C659 50%
-    /* #0a4234 50% */
   );
   color: white;
 }
@@ -77,7 +75,10 @@ a:active {
   top: 50%;
   height: 60px;
   width: 60px;
-  background-color: #88C659;
+  font-weight: 800;
+  font-size: 45px;
+  background-color: #88c659a6;
+  background-size: 20%;
   color: white;
   border-radius: 100%;
   display: flex;
@@ -90,15 +91,11 @@ a:active {
 .back-arrow {
   left: 10px;
   margin-top: 40px;
-  /* top: 250px; */
-  font-size: 30px;
 }
 
 .next-arrow {
   right: 10px;
   margin-top: 40px;
-  /* top: 250px; */
-  font-size: 30px;
 }
 
 .events-link {
