--- a/frontend/src/components/Comments/CommentItem.css
+++ b/frontend/src/components/Comments/CommentItem.css
@@ -69,6 +69,8 @@
 
 .event-dropdown-content button {
   background: none;
+  width: 100%;
+  height: 100%;
   border: none;
   text-align: center;
   cursor: pointer;
@@ -77,6 +79,41 @@
   padding: 5px;
 }
 
-.event-dropdown-content:hover {
+.event-dropdown-content button:hover {
   background-color: #f1f1f1;
+}
+
+.edit-textarea {
+  width: 100%;
+  max-height: fit-content;
+  padding: 2px;
+  border: 2px dotted salmon;
+  resize: none;
+  animation: mymove 2s infinite;
+}
+
+@keyframes mymove {
+  from {
+    border: 2px dotted salmon;
+  }
+  to {
+    border: 2px solid salmon;
+  }
+}
+
+.save-edit-but {
+  margin-top: 2px;
+  padding: 4px;
+  background-color: #007bff;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 14px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  width: 75px;
+}
+
+.save-edit-but:hover {
+  background-color: #0056b3;
 }
