--- a/frontend/src/components/Events/EventShow.css
+++ b/frontend/src/components/Events/EventShow.css
@@ -39,7 +39,8 @@
 
 .comments {
   height: 60%;
-  border: 1px dotted rgb(0, 255, 115);
+  /* border: 1px dotted rgb(0, 255, 115); */
+  background-image: url(../../images/blank-paper.jpg);
 }
 
 .calendar {
