--- a/frontend/src/components/Comments/CommentForm.css
+++ b/frontend/src/components/Comments/CommentForm.css
@@ -19,7 +19,7 @@
 .comment-form button {
   margin-top: 10px;
   padding: 6px 14px;
-  background-color: #007bff;
+  background-color: #88C659;
   color: #fff;
   border: none;
   border-radius: 4px;
@@ -29,5 +29,5 @@
 }
 
 .comment-form button:hover {
-  background-color: #0056b3;
+  background-color: #4caf50;
 }
