--- a/frontend/src/components/Comments/CommentForm.css
+++ b/frontend/src/components/Comments/CommentForm.css
@@ -14,10 +14,11 @@
   min-height: 100px;
   font-size: 16px;
   resize: none;
+  box-shadow: 5px 5px #a4a1a1;
 }
 
 .comment-form button {
-  margin-top: 10px;
+  margin-top: 20px;
   padding: 6px 14px;
   background-color: #88C659;
   color: #fff;
@@ -29,5 +30,5 @@
 }
 
 .comment-form button:hover {
-  background-color: #4caf50;
+  background-color: #FDD34F;
 }
