--- a/frontend/src/components/Events/EventShow.css
+++ b/frontend/src/components/Events/EventShow.css
@@ -81,31 +81,49 @@
 
 .event-show-page h4 {
   margin-top: 15px;
+  font-weight: 750;
 }
 
 .days {
   display: flex;
   flex-direction: row;
   justify-content: center;
+  align-items: center;
   list-style: none;
-  /* gap: 10px; */
   /* border: 1px solid black; */
+  /* box-shadow: 5px 10px #888888; */
+  /* width: 350px; */
 }
 
 .days li {
-  border: 1px solid black;
+  /* border: 1px solid black; */
   /* border-right: 1px solid black; */
   /* margin-left: 5px; */
   /* padding-right: 10px; */
-  min-width: 50px;
-  min-height: 50px;
+  /* min-width: 50px;
+  min-height: 50px; */
   display: flex;
   align-items: center;
   justify-content: center;
+  /* background-color: white; */
+  /* box-shadow: 5px 10px #888888; */
 }
-
-.show-day {
+.days>div{
+  min-height: 70px;
+  min-width: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  box-shadow: 5px 5px #888888be;
+  /* border-right: 1px solid black; */
+  border: 1px solid black;
+  font-size: 20px;
+  font-weight: 500;
+}
+.days .show-day {
   background-color: #FDD34F;
+  /* width: 100%; */
 }
 
 #nearby-places {
