conditional rendering of comment form

--- a/frontend/src/components/Navigation/navigation.css
+++ b/frontend/src/components/Navigation/navigation.css
@@ -46,10 +46,12 @@
   font-weight: 700;
   width: fit-content;
   height: auto;
+  transition: background-color 0.3s ease;
 }
 
 .login:hover, .signup:hover, .logout:hover {
-  background-color:#FDD34F ;
+  background-color:#FDD34F;
+  color: black;
 }
 
 .logout {
