--- a/frontend/src/components/Events/EventIndex.css
+++ b/frontend/src/components/Events/EventIndex.css
@@ -17,14 +17,24 @@
 }
 
 .google-map {
-    width: 50%;
-    height: 100%;
+    width: 80%;
+    height: 80%;
     /* border: 5px dotted rgb(0, 8, 255); */
     margin-right: 10px;
+    margin-top: 20px;
     text-align: center;
     position: sticky;
     top: 0;
     height: 95vh;
+}
+
+.map-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 50%;
+    height: 100%;
 }
 
 .event-list-item {
@@ -36,6 +46,7 @@
     margin-bottom: 10px;
     border-radius: 10px;
     box-shadow: 5px 5px rgba(0, 0, 0, 0.1);
+    color: rgb(86, 86, 86);
 }
 
 .event-list :hover {
