--- a/frontend/src/components/BottomFooter/BottomFooter.css
+++ b/frontend/src/components/BottomFooter/BottomFooter.css
@@ -1,27 +1,48 @@
-/* CSS styles for the professional website footer */
 .bottom-footer {
-    background-color: #f0f0f0;
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .bottom-footer-col {
-    flex: 1;
-    margin-right: 20px; 
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  
-  .bottom-footer-title {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-  
-  .bottom-footer-col li {
-    font-size: 14px;
-    margin-bottom: 5px;
-    text-decoration: none;
-  }
-  
+  background-color: #f0f0f0;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.bottom-footer-col {
+  flex: 1;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.bottom-footer-title {
+  font-size: 18px;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.bottom-footer-col li {
+  font-size: 14px;
+  margin-bottom: 5px;
+  text-decoration: none;
+}
+
+.bottom-footer-col a img {
+  width: auto;
+  height: 25px;
+  display: inline-block;
+  margin-right: 5px;
+  transition: transform 0.3s;
+}
+
+.bottom-footer-col a:hover img {
+  transform: rotateY(180deg);
+}
+
+.logo-list {
+  display: flex;
+  justify-content: center;
+  margin-right: 25px;
+}
+
+.logo {
+  margin: 0 5px;
+}
