--- a/frontend/src/components/Events/EventIndex.css
+++ b/frontend/src/components/Events/EventIndex.css
@@ -71,10 +71,10 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    /* justify-content: center; */
     margin-top: 5px;
     width: 50%;
-    height: 100%;
+    /* height: 100%; */
 }
 
 .event-list-item {
