--- a/frontend/src/components/Events/EventIndex.css
+++ b/frontend/src/components/Events/EventIndex.css
@@ -15,13 +15,14 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    border-right: 1px solid rgb(198, 197, 197);
 }
 
 #event-list-header {
     margin-top: 20px;
     text-align: center;
     font-weight: 750;
+    padding-bottom: 5px;
+
 }
 
 #event-list-header:hover {
@@ -30,7 +31,6 @@
 
 .google-map {
     width: 100%;
-    /* border: 5px dotted rgb(0, 8, 255); */
     margin-right: 10px;
     text-align: center;
     position: sticky;
@@ -45,15 +45,15 @@
     margin-bottom: 15px;
     margin-top: 30px;
     padding-top: 10px;
-    border-bottom: 1px solid rgb(198, 197, 197);
-    border-top: 1px solid rgb(198, 197, 197);
+    border-bottom: 1px solid rgb(227, 227, 227);
+    /* border-top: 1px solid rgb(227, 227, 227); */
 }
 
 .boros {
-    width: 100%;
+    padding-top: 10px;
     display: flex;
     justify-content: center;
-    border-bottom: 1px solid rgb(198, 197, 197);
+    border-bottom: 1px solid rgb(227, 227, 227);
 }
 
 .boros > * {
@@ -62,7 +62,7 @@
 
 .total-events {
     font-weight: 400;
-    
+    border-bottom: 1px solid rgb(227, 227, 227);
 }
 
 .map-wrapper {
@@ -95,10 +95,24 @@
 .single-borough {
     padding-left: 15px;
     padding-right: 15px;
+    padding-bottom: 0px;
+    margin-bottom: 10px;
+    border-right: 1px solid rgb(227, 227, 227);
+
     /* margin-left: 10px; */
     /* border: solid rgb(197, 197, 197) 1px; */
     /* border-radius: 10px; */
 }
+
+
+.single-borough:nth-child(1) { 
+    border-left: 1px solid rgb(227, 227, 227);
+}
+
+/* .single-borough:nth-child(4) {
+    border-left: 1px solid rgb(227, 227, 227);
+
+} */
 
 #what-open-street {
     font-size: 12px;
