get events to change on click

--- a/frontend/src/components/Events/EventIndex.css
+++ b/frontend/src/components/Events/EventIndex.css
@@ -50,14 +50,16 @@
 }
 
 .boros {
-    padding-top: 10px;
+    padding-bottom: 0px;
     display: flex;
     justify-content: center;
     border-bottom: 1px solid rgb(227, 227, 227);
 }
 
 .boros > * {
-    margin-left: 8px;
+    padding: 8px;
+    margin-bottom: 0px;
+    padding-bottom: 10px;
 }
 
 .total-events {
@@ -98,21 +100,11 @@
     padding-bottom: 0px;
     margin-bottom: 10px;
     border-right: 1px solid rgb(227, 227, 227);
-
-    /* margin-left: 10px; */
-    /* border: solid rgb(197, 197, 197) 1px; */
-    /* border-radius: 10px; */
 }
-
 
 .single-borough:nth-child(1) { 
     border-left: 1px solid rgb(227, 227, 227);
 }
-
-/* .single-borough:nth-child(4) {
-    border-left: 1px solid rgb(227, 227, 227);
-
-} */
 
 #what-open-street {
     font-size: 12px;
@@ -122,3 +114,9 @@
 #what-open-street:hover {
     cursor: pointer;
 }
+
+.boros > *:hover{
+    cursor: pointer;
+    background-color: rgb(137, 233, 137);
+}
+
