add days styling on list item

--- a/frontend/src/components/Events/EventIndex.css
+++ b/frontend/src/components/Events/EventIndex.css
@@ -78,8 +78,10 @@
 }
 
 .event-list-item {
-    display: flex;
-    flex-direction: column;
+    display: grid ;
+    grid-template-columns: 1fr 1fr;
+    /* flex-direction: row; */
+    /* justify-content: space-between; */
     padding: 2%;
     border: 1px solid forestgreen;
     margin-left: 10px;
@@ -120,3 +122,7 @@
     background-color: rgb(137, 233, 137);
 }
 
+#logo-in-text {
+    max-width: 2.5em;
+    max-height: 2.5em;
+}
