--- a/frontend/src/components/Comments/CommentForm.css
+++ b/frontend/src/components/Comments/CommentForm.css
@@ -17,18 +17,21 @@
   box-shadow: 5px 5px #a4a1a1;
 }
 
+
 .comment-form button {
   margin-top: 20px;
   padding: 6px 14px;
+  margin-bottom: 10px;
   background-color: #88C659;
   color: #fff;
   border: none;
   border-radius: 4px;
   cursor: pointer;
   font-size: 16px;
-  width: 85px;
+  width: fit-content;
 }
 
 .comment-form button:hover {
   background-color: #FDD34F;
+  color: black;
 }
