--- a/frontend/src/components/BottomFooter/BottomFooter.css
+++ b/frontend/src/components/BottomFooter/BottomFooter.css
@@ -1,13 +1,16 @@
 .bottom-footer {
   background-color: #f0f0f0;
   padding: 20px;
+}
+
+.bottom-footer-row {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
 .bottom-footer-col {
-  flex: 1;
-  margin-right: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -45,4 +48,9 @@
 
 .logo {
   margin: 0 5px;
+}
+
+.technologies-used {
+  text-align: center;
+  cursor: pointer;
 }
